--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,23 @@ span {
 .completed {
     text-decoration: line-through;
 }
+
+.edit {
+    left: 90%;
+}
+
+.edit-form {
+    z-index: 9999999;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow:  0px 0px 5px 0px #FF1493;
+    width: 50%;
+}
+
+.edit-form input {
+    margin:0;
+}
